fix: Make info window width responsive on mobile
Make info window width responsive to view width (with
a max-width) to make sure info window fits comfortably on screen.

--- a/src/css/style-small.css
+++ b/src/css/style-small.css
@@ -24,7 +24,8 @@ blockquote {
 
 .info-window-content {
   overflow: auto;
-  width: 300px;
+  max-width: 300px;
+  width: 50vw;
 }
 
 .info-window-heading {
